# livraria_3info1_2023

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor.py  0004_livro_alter_autor_options.py  0005_livro_categoria.py  0006_livro_editora.py  0007_livro_autores.py
